kubernetes/rancher/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - grafana.chingadero.com
      secretName: grafana-tls-secret
  rules:
    - host: grafana.chingadero.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
